stops page jumping when sort button is clicked

--- a/CMS/static/scss/reorder.scss
+++ b/CMS/static/scss/reorder.scss
@@ -1,10 +1,3 @@
-
-#internal-resources {
-  #newest {
-    display: none;
-  }
-}
-
 .sort-button {
   &:focus,
   &:hover,
